--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ a {
     padding: 25px 40px;
     width: 450px;
     margin-top: 20px;
-    margin-bottom: 400px;
+    margin-bottom: 315px;
 }
 .img-1 {
     transform: translate(40px, 5px);
@@ -96,23 +96,26 @@ a {
 /* section tugatildi */
 /* yangi section ochildi */
 .orta-2-1 {
+    padding-top: 150px;
     display: flex;
+    margin-left: 70px;
 }
 .orta-2-3 {
+    width: 410px;
     display: flex;
-    margin-left: 80px;
     margin: 20px;
-    border: 1px solid black;
     background: #FFFFFF;
     border-radius: 10px;
 }
 .orta-2-3 img {
+    font-size: 30px;
     margin-top: 10px;
     margin-left: 10px;
     height: 69px;
 }
 .orta-2-3 h4 {
     padding: 20px 20px 10px 20px;
+    
 }
 .orta-2-3 p {
     padding: 0px 20px 20px 20px;
@@ -120,3 +123,248 @@ a {
     letter-spacing: -0.500211px;
     color: #696871;
 }
+.orta-2-5 h2{
+    margin-top: 80px;
+    font-size: 50px;
+    margin-left: 100px;
+    color: #fff;
+}
+.bottom {
+    margin-bottom: 150px;
+}
+.orta-2-5 p {
+    margin-left: 100px;
+    font-size: 21px;
+    line-height: 39px;
+    margin-top: 10px;
+    letter-spacing: -0.656526px;
+    color: rgba(255, 255, 255, 0.702469);
+    margin-bottom: 40px;
+
+}
+.orta-2-5 a {
+    margin-left: 100px;
+    padding: 15px 35px;
+    background: #F04037;
+    border: 1px solid #C31A12;
+    border-radius: 5px;
+    color: #fff;
+    transition: color, background-color 0.5s ease;
+}
+.orta-2-5 a:hover {
+    background-color: #fff;
+    color: #F04037;
+}
+.rasm-uchun-2 {
+    background-image: url(../img/BG-img-1.png);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: contain cover;
+}
+/* secton tugatildi 
+yangi section ochildi */
+.eng-oson {
+    padding-top: 150px;
+    margin-left: 80px;
+}
+.eng-oson h2 {
+    font-size: 50px;
+    width: 500px;
+}
+.eng-oson p {
+    margin-top: 10px;
+    width: 500px;
+    font-size: 21px;
+    line-height: 39px;
+    letter-spacing: -0.656526px;
+    color: #696871;
+    margin-bottom: 40px;
+}
+.eng-oson a {
+    margin-top: 50px;
+    padding: 15px 40px;
+    background: #F04037;
+    border: 1px solid #C31A12;
+    border-radius: 5px;
+    color: #fff;
+    transition: color, background-color 0.5s ease;
+}
+.bottom-2 {
+    margin-bottom: 200px;
+}
+.eng-oson a:hover {
+    color: red;
+    background-color: #fff;
+}
+.keremas {
+    padding: 200px;
+}
+.keresiz {
+    padding: 40px;
+}
+.rasm-uchun-3 {
+    background-image: url(../img/Oval.png), url(../img/BG-img-3.jpg);
+    background-repeat: no-repeat;
+    background-size: 250px, 600px;
+    background-position: 620px 380px, top right;
+}
+/* section tugatildi
+yangi section */
+.sal-qiyin-2 h2 {
+    text-align: center;
+    font-size: 50px;
+    margin-top: -250px;
+    padding-top: 80px;
+}
+.sal-qiyin {
+    display: flex;
+}
+.sal-qiyin-3 {
+    width: 200px;
+    display: flex;
+    transition: transform 2s ease;
+}
+.sal-qiyin-3:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+    border: 1px solid rgb(88, 179, 111);
+}
+.sal-qiyin {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    justify-content: space-evenly;
+}
+
+.sal-qiyin-3 {
+    width: 30%;
+    margin-right: 10px;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    background-color: white;
+    background: #FFFFFF;
+    box-shadow: 0px 52px 54px rgba(65, 62, 101, 0.296766);
+    border-radius: 10px;
+    height: 70px;
+}
+.sal-qiyin-3 img {
+    padding: 10px;
+}
+.sal-qiyin-3 p {
+    padding: 20px;
+}
+
+.custom {
+    margin: 0 100px 30px 100px;
+}
+.rasm-uchun-6 {
+    background-image: url(../img/bg-img-5.png);
+    background-repeat: no-repeat;
+    background-size: 1900px;
+    background-position: top center;
+}
+/* section tugatildi 
+yangi section boshlabdi */
+.eng-oson-2 {
+    padding-top: 100px;
+    margin-top: 50px;
+    margin-left: 80px;
+}
+.eng-oson-2 h2 {
+    width: 550px;
+    font-size: 55px;
+}
+.eng-oson-2 p {
+    width: 550px;
+    margin-top: 40px;
+    font-size: 21px;
+    line-height: 39px;
+    letter-spacing: -0.656526px;
+    color: #696871;
+    margin-bottom: 40px;
+}
+.eng-oson-2 a {
+    padding: 15px 40px;
+    background: #F04037;
+    border: 1px solid #C31A12;
+    border-radius: 5px;
+    color: #fff;
+    transition: color, background-color 0.5s ease;
+}
+.eng-oson-2 a:hover {
+    color: red;
+    background-color: #fff;
+
+}
+.rasm-ucun-6 {
+    background-image: url(../img/Group.png), url(../img/Img.png);
+    background-repeat: no-repeat;
+    background-size: 250px, 520px;
+    /* border: 9px solid #FFFFFF;
+    box-shadow: 0px 52px 54px rgba(65, 62, 101, 0.296766); */
+    background-position: top 320px left 700px, top left 750px;
+}
+.keresiz-2 {
+    padding: 100px;
+}
+/* section tugatildi 
+yangi section boshlandi */
+.koment-heding {
+    margin-top: 100px;
+    padding-top: 50px;
+    text-align: center;
+}
+.koment-heding h2 {
+    font-size: 50px;
+}
+.koment-heding p {
+    width: 500px;
+    margin-left: 320px;
+    margin-top: 10px;
+    font-size: 18px;
+    line-height: 32px;
+    text-align: center;
+    letter-spacing: -0.656526px;
+    color: #696871;
+}
+.komment {
+    display: flex;
+    margin-left: 80px;
+
+}
+.komment-2 {
+    width: 400px;
+    margin: 60px 0px 0px 80px;
+    background: #FFFFFF;
+    border: 1px solid #EAE9F2;
+    border-radius: 10px;
+}
+.komment-2 p {
+    font-size: 21px;
+    line-height: 35px;
+    letter-spacing: -0.656526px;
+    color: #19191B;
+}
+.komment-3 {
+    display: flex;
+    margin-top: 20px;
+}
+.komment-3 img {
+    padding: 10px;
+}
+.komment-6 {
+    margin-left: 490px;
+    margin-top: 50px;
+    padding-bottom: 120px;
+}
+.komment-6:hover {
+    cursor: pointer;
+}
+.rasm-ucun-7 {
+    background-image: url(../img/bg-img-5.png);
+    background-repeat: no-repeat;
+    background-size: 1800px;
+    background-position: top center;
+}
+/* section tugatildi 
+yangi section boshlandi */
