--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 body {
     font-family: sans-serif;
 }
+
 .eng-eng-katta {
     padding: 20px;
     font-weight: bold;
@@ -106,6 +107,7 @@ a {
     margin: 20px;
     background: #FFFFFF;
     border-radius: 10px;
+    margin-left: 200px;
 }
 .orta-2-3 img {
     font-size: 30px;
@@ -130,7 +132,7 @@ a {
     color: #fff;
 }
 .bottom {
-    margin-bottom: 150px;
+    /* margin-bottom: 850px; */
 }
 .orta-2-5 p {
     margin-left: 100px;
@@ -151,6 +153,9 @@ a {
     color: #fff;
     transition: color, background-color 0.5s ease;
 }
+.keraksiz-5 {
+    padding: 100px;
+}
 .orta-2-5 a:hover {
     background-color: #fff;
     color: #F04037;
@@ -159,7 +164,7 @@ a {
     background-image: url(../img/BG-img-1.png);
     background-repeat: no-repeat;
     background-position: top center;
-    background-size: contain cover;
+    background-size: 1800px;
 }
 /* secton tugatildi 
 yangi section ochildi */
@@ -222,7 +227,7 @@ yangi section */
 .sal-qiyin-3 {
     width: 200px;
     display: flex;
-    transition: transform 2s ease;
+    transition: transform 0.5s ease;
 }
 .sal-qiyin-3:hover {
     transform: scale(1.2);
@@ -300,8 +305,6 @@ yangi section boshlabdi */
     background-image: url(../img/Group.png), url(../img/Img.png);
     background-repeat: no-repeat;
     background-size: 250px, 520px;
-    /* border: 9px solid #FFFFFF;
-    box-shadow: 0px 52px 54px rgba(65, 62, 101, 0.296766); */
     background-position: top 320px left 700px, top left 750px;
 }
 .keresiz-2 {
@@ -401,7 +404,7 @@ yangi section boshlandi */
     background: #F04037;
     border: 1px solid #C31A12;
     border-radius: 10px;
-    padding: 20px 170px;
+    padding: 20px 150px;
     margin-top: 20px;
     margin-left: 5px;
     color: #fff;
@@ -441,13 +444,162 @@ yangi section boshlandi */
     margin-left: 20px;
 }
 .eng-paski-4 {
-    padding: 0px 70px;
+    padding: 0px 50px;
     margin-top: -95px;
     font-weight: bold;
 }
 .eng-paski-5 {
+    font-weight: 400;
+    margin-top: 25px;
     font-size: 16px;
     line-height: 38px;
     letter-spacing: -0.500211px;
     color: #19191B;
 }
+.eng-paski-5 li {
+    transition: decoration 0.5s ease;
+}
+.eng-paski-5 li:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    color: rgb(42, 42, 196);
+}
+/* section tugatildi
+responsiv boshlandi */
+@media (max-width: 1040px) {
+    .container {
+        width: 1000px;
+    }
+    .boshlovchi {
+        margin-left: 100px;
+    }
+    .rasm-uchun {
+        background-size: 200px, 150px, 1200px;
+        background-position: top 100px left 500px, top 350px left 850px, top center ;
+    }
+    .orta-2-1 {
+        margin-top: -220px;
+        padding-top: 150px;
+        display: flex;
+        margin-left: 70px;
+    }
+    .orta-2-5 h2{
+        margin-top: 20px;
+        font-size: 50px;
+        margin-left: 100px;
+        color: #fff;
+    }
+    .rasm-uchun-3 {
+        background-image: url(../img/Oval.png), url(../img/BG-img-3.jpg);
+        background-repeat: no-repeat;
+        background-size: 150px, 500px;
+        background-position: 500px 380px, top right -50px;
+    }
+    .sal-qiyin-2 h2 {
+        text-align: center;
+        font-size: 50px;
+        margin-top: -300px;
+        padding-top: 80px;
+    }
+    .rasm-ucun-6 {
+        background-image: url(../img/Group.png), url(../img/Img.png);
+        background-repeat: no-repeat;
+        background-size: 200px, 420px;
+        background-position: top 320px left 600px, top 50px left 650px;
+    }
+    .koment-heding p {
+        width: 500px;
+        margin-left: 270px;
+        margin-top: 10px;
+        font-size: 18px;
+        line-height: 32px;
+        text-align: center;
+        letter-spacing: -0.656526px;
+        color: #696871;
+    }
+    .komment {
+        display: flex;
+        margin-left: 50px;
+    
+    }
+    .rasm-ucun-8 {
+        background-image: url(../img/oval-2.png), url(../img/img-1.png), url(../img/BG-img-2.png);
+        background-repeat: no-repeat;
+        background-size: 250px, 350px, 1800px;
+        background-position: top 220px left 230px, top 110px left 50px, top center;
+    }
+    .eng-oson-3 {
+        padding-top: 200px;
+        margin-left: 450px;
+        margin-bottom: 200px;
+    }
+}
+@media (max-width: 940px) {
+    .container {
+        width: 900px;
+    }
+    .boshlovchi {
+        margin-left: 100px;
+    }
+    .rasm-uchun {
+        background-size: 200px, 150px, 1100px;
+        background-position: top 100px left 450px, top 350px left 750px, top center ;
+    }
+    .orta-2-1 {
+        margin-top: -275px;
+        padding-top: 150px;
+        display: block;
+        margin-left: 70px;
+    }
+    .orta-2-5 h2{
+        margin-top: 20px;
+        font-size: 50px;
+        margin-left: 100px;
+        color: #fff;
+    }
+    .rasm-uchun-3 {
+        background-image: url(../img/Oval.png), url(../img/BG-img-3.jpg);
+        background-repeat: no-repeat;
+        background-size: 150px, 500px;
+        background-position: 500px 380px, top right -50px;
+    }
+    .sal-qiyin-2 h2 {
+        text-align: center;
+        font-size: 50px;
+        margin-top: -300px;
+        padding-top: 80px;
+    }
+    .rasm-ucun-6 {
+        background-image: url(../img/Group.png), url(../img/Img.png);
+        background-repeat: no-repeat;
+        background-size: 200px, 420px;
+        background-position: top 320px left 600px, top 50px left 650px;
+    }
+    .koment-heding p {
+        width: 500px;
+        margin-left: 270px;
+        margin-top: 10px;
+        font-size: 18px;
+        line-height: 32px;
+        text-align: center;
+        letter-spacing: -0.656526px;
+        color: #696871;
+    }
+    .komment {
+        display: flex;
+        margin-left: 50px;
+    
+    }
+    .rasm-ucun-8 {
+        background-image: url(../img/oval-2.png), url(../img/img-1.png), url(../img/BG-img-2.png);
+        background-repeat: no-repeat;
+        background-size: 250px, 350px, 1800px;
+        background-position: top 220px left 230px, top 110px left 50px, top center;
+    }
+    .eng-oson-3 {
+        padding-top: 200px;
+        margin-left: 450px;
+        margin-bottom: 200px;
+    }
+}
+
