--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,6 @@ a {
     margin: 20px;
     background: #FFFFFF;
     border-radius: 10px;
-    margin-left: 200px;
 }
 .orta-2-3 img {
     font-size: 30px;
@@ -132,7 +131,7 @@ a {
     color: #fff;
 }
 .bottom {
-    /* margin-bottom: 850px; */
+    margin-bottom: 150px;
 }
 .orta-2-5 p {
     margin-left: 100px;
@@ -153,9 +152,6 @@ a {
     color: #fff;
     transition: color, background-color 0.5s ease;
 }
-.keraksiz-5 {
-    padding: 100px;
-}
 .orta-2-5 a:hover {
     background-color: #fff;
     color: #F04037;
@@ -164,7 +160,7 @@ a {
     background-image: url(../img/BG-img-1.png);
     background-repeat: no-repeat;
     background-position: top center;
-    background-size: 1800px;
+    background-size: contain cover;
 }
 /* secton tugatildi 
 yangi section ochildi */
@@ -548,7 +544,7 @@ responsiv boshlandi */
     .orta-2-1 {
         margin-top: -275px;
         padding-top: 150px;
-        display: block;
+        display: flex;
         margin-left: 70px;
     }
     .orta-2-5 h2{
